added frederic's corrections. Some points still need to be discussed

--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -20,6 +20,7 @@
 \usepackage{caption}
 \usepackage{url}
 \usepackage{tikz}
+\usepackage{diagbox}
 
 \DeclareSymbolFont{extraup}{U}{zavm}{m}{n}
 \DeclareMathSymbol{\varheart}{\mathalpha}{extraup}{86}
@@ -75,7 +76,7 @@
 \address[CS]{Department of Computer Science, University of California, Santa Barbara, CA 93106-5110, United States.}
 \address[UBONN]{Institute for Numerical Simulation, University of Bonn, Bonn 53115, Germany.}
 
-\author[MECHE]{Mohammad Mirzadeh\corref{cor}} \author[MECHE]{Arthur Guittet} \author[UBONN] {Carsten Burstedde} \author[MECHE,CS]{Fr\'ed\'eric Gibou}
+\author[MECHE]{Mohammad Mirzadeh\corref{cor}} \author[MECHE]{Arthur Guittet} \author[UBONN] {Carsten Burstedde} \author[MECHE,CS]{Frederic Gibou}
 
 \input{abstract}
 \input{introduction}
