--- a/paper/tex/levelset_method.tex
+++ b/paper/tex/levelset_method.tex
@@ -1,18 +1,18 @@
 %!TEX root = draft.tex
 \section{The level-set method}\label{sec:levelset method}
-The level-set method, introduced in \cite{Osher;Sethian:88:Fronts-Propagating-w}, is an implicit framework for tracking interfaces that undergo complicated topological changes. In this framework an interface is represented by the zero contour of a higher dimensional function, e.g.\ a curve in two spatial dimension can be described as $\Gamma = \{(x,y) | \phi(x,y) = 0\}$ where $\phi(x,y)$ is the level-set function. The evolution of the curve under a velocity field $\mathbf{V}$ is then obtained by solving the level-set equation:
+The level-set method, introduced in \cite{Osher;Sethian:88:Fronts-Propagating-w}, is an implicit framework for tracking interfaces that undergo complicated topological changes. In this framework, an interface is represented by the zero contour of a higher dimensional function, e.g.\ a curve in two spatial dimensions can be described as $\Gamma = \{(x,y) | \phi(x,y) = 0\}$, where $\phi(x,y)$ is the level-set function. The evolution of the curve under a velocity field $\underline{\mbf{u}}$ is then obtained by solving the level-set equation:
 \be
-\phi_t + \mathbf{V} \cdot \nabla \phi = 0.
+\phi_t + \underline{\mbf{u}} \cdot \nabla \phi = 0.
 \label{eq:ls}
 \ee
-When the velocity field does not depend on the level-set function itself, equation \eqref{eq:ls} can be solved using the semi-Lagrangian method. An important advantage of the semi-Lagrangian method over the regular finite difference method is its unconditional stability which allows for arbitrarily large time steps. This is particularly important when using adaptive grids that allow for higher grid resolutions.
+When the velocity field does not depend on the level-set function itself, equation \eqref{eq:ls} can be solved using the semi-Lagrangian method. An important advantage of the semi-Lagrangian method over the regular finite difference method is its unconditional stability, which allows for arbitrarily large time steps. This is particularly important when using adaptive grids, as higher grid resolutions translate into unpractical smaller time steps.
 
-In general, an infinite number of level-set functions can describe the same zero contour and thus interface. However, it is desirable to chose a function with the signed distance property, i.e.\ $|\nabla \phi| = 1$. As detailed in section \ref{sec:introduction}, we solve the pseudo-time transient reinitialization equation \cite{Sussman;Smereka;Osher:94:A-Level-Set-Approach, Osher;Fedkiw:01:Level-Set-Methods:-A} to achieve this property,
+In general, an infinite number of level-set functions can describe the same zero contour and thus an interface. However, it is desirable to chose a function with the signed distance property, i.e.\ $|\nabla \phi| = 1$. As detailed in section \ref{sec:introduction}, we solve the pseudo-time transient reinitialization equation \cite{Sussman;Smereka;Osher:94:A-Level-Set-Approach, Osher;Fedkiw:01:Level-Set-Methods:-A} to achieve this property,
 \be
 \phi_\tau + S(\phi_0)\left(|\nabla \phi| - 1\right) = 0,
 \label{eq:reinitialization}
 \ee
-where $\phi_0$ is any level-set function that correctly describes the interface location and $S(\phi_0)$ is an appropriate approximation of the sign function \cite{Osher;Fedkiw:02:Level-Set-Methods-an}. Here, we do not go into the details of the sequential algorithms for solving equations \eqref{eq:ls} and \eqref{eq:reinitialization}. Instead, we note that the algorithms presented in section \ref{sec:parallel algorithms} are based on the sequential methods presented in \cite{Min;Gibou:07:A-second-order-accur} and refer the interested reader to the aforementioned article and references therein for more details.
+where $\tau$ is a pseudo time step, $\phi_0$ is any level-set function that correctly describes the interface location and $S(\phi_0)$ is an appropriate approximation of the sign function. Here, we do not go into the details of the sequential algorithms for solving equations \eqref{eq:ls} and \eqref{eq:reinitialization}. Instead, we note that the algorithms presented in section \ref{sec:parallel algorithms} are based on the sequential methods presented in \cite{Min;Gibou:07:A-second-order-accur} and refer the interested reader to the aforementioned articles and references therein for more details.
 
 % \indent The level-set method is a method to capture interfaces implicitely by constructing a function $\phi$, called the level-set function, that is negative on on side of the domain $\Omega^-$ and positive on the other side $\Omega^+$, thus defining the interface $\Gamma$ as the zero contour of $\phi$, $\Gamma = \{\mathbf{x} \vert \phi(\mathbf{x}=0\}$.\\
 
